Changed baudrate from 115200 to 19200

--- a/Lab3/Lab3.ioc
+++ b/Lab3/Lab3.ioc
@@ -160,7 +160,8 @@ RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=192000000
 RCC.VCOSAIInputFreq_Value=1000000
 RCC.VCOSAIOutputFreq_Value=192000000
-USART2.IPParameters=VirtualMode
+USART2.BaudRate=19200
+USART2.IPParameters=VirtualMode,BaudRate
 USART2.VirtualMode=VM_ASYNC
 board=custom
 isbadioc=false
