--- a/Lab3/Lab3.ioc
+++ b/Lab3/Lab3.ioc
@@ -1,6 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
 Dma.Request0=USART2_RX
-Dma.RequestsNb=1
+Dma.Request1=USART2_TX
+Dma.RequestsNb=2
 Dma.USART2_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART2_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.USART2_RX.0.Instance=DMA1_Stream5
@@ -11,6 +12,16 @@ Dma.USART2_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART2_RX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.USART2_RX.0.Priority=DMA_PRIORITY_VERY_HIGH
 Dma.USART2_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART2_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART2_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART2_TX.1.Instance=DMA1_Stream6
+Dma.USART2_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART2_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.USART2_TX.1.Mode=DMA_NORMAL
+Dma.USART2_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART2_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.USART2_TX.1.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.USART2_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -49,6 +60,7 @@ MxCube.Version=6.6.1
 MxDb.Version=DB.6.0.60
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -126,38 +138,42 @@ ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true
-RCC.AHBFreq_Value=96000000
-RCC.APB1Freq_Value=96000000
-RCC.APB1TimFreq_Value=96000000
-RCC.APB2Freq_Value=96000000
-RCC.APB2TimFreq_Value=96000000
+RCC.AHBFreq_Value=50000000
+RCC.APB1CLKDivider=RCC_HCLK_DIV2
+RCC.APB1Freq_Value=25000000
+RCC.APB1TimFreq_Value=50000000
+RCC.APB2Freq_Value=50000000
+RCC.APB2TimFreq_Value=50000000
 RCC.CECFreq_Value=32786.88524590164
-RCC.CortexFreq_Value=96000000
-RCC.FCLKCortexFreq_Value=96000000
-RCC.FMPI2C1Freq_Value=96000000
+RCC.CortexFreq_Value=50000000
+RCC.FCLKCortexFreq_Value=50000000
+RCC.FMPI2C1Freq_Value=25000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=96000000
-RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PWRFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIInputFreq_Value,VCOSAIOutputFreq_Value
-RCC.MCO2PinFreq_Value=96000000
-RCC.PLLCLKFreq_Value=96000000
+RCC.HCLKFreq_Value=50000000
+RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLRCLKFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PWRFreq_Value,SAIAFreq_Value,SAIBFreq_Value,SDIOFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIInputFreq_Value,VCOSAIOutputFreq_Value
+RCC.MCO2PinFreq_Value=50000000
+RCC.PLLCLKFreq_Value=50000000
 RCC.PLLI2SPCLKFreq_Value=96000000
 RCC.PLLI2SQCLKFreq_Value=96000000
 RCC.PLLI2SRCLKFreq_Value=96000000
-RCC.PLLQCLKFreq_Value=96000000
-RCC.PLLRCLKFreq_Value=96000000
+RCC.PLLM=8
+RCC.PLLN=50
+RCC.PLLQCLKFreq_Value=50000000
+RCC.PLLRCLKFreq_Value=50000000
 RCC.PLLSAIPCLKFreq_Value=96000000
 RCC.PLLSAIQCLKFreq_Value=96000000
-RCC.PWRFreq_Value=96000000
+RCC.PWRFreq_Value=50000000
 RCC.SAIAFreq_Value=96000000
 RCC.SAIBFreq_Value=96000000
-RCC.SDIOFreq_Value=96000000
-RCC.SYSCLKFreq_VALUE=96000000
+RCC.SDIOFreq_Value=50000000
+RCC.SPDIFRXFreq_Value=50000000
+RCC.SYSCLKFreq_VALUE=50000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLRCLK
-RCC.USBFreq_Value=96000000
+RCC.USBFreq_Value=50000000
 RCC.VCOI2SInputFreq_Value=1000000
 RCC.VCOI2SOutputFreq_Value=192000000
-RCC.VCOInputFreq_Value=1000000
-RCC.VCOOutputFreq_Value=192000000
+RCC.VCOInputFreq_Value=2000000
+RCC.VCOOutputFreq_Value=100000000
 RCC.VCOSAIInputFreq_Value=1000000
 RCC.VCOSAIOutputFreq_Value=192000000
 USART2.BaudRate=19200
